# DOS

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: kernel.cpp.B788A2BF043EFB5E.idx
cmake/: toolchain-x86.cmake
kernel/: CMakeLists.txt  debug.cpp  entry.asm  kernel.cpp  linker.ld  multiboot.cpp  printf.cpp
kernel/arch/: asm.cpp  gdt.cpp  gdt.h  idt.cpp  isr_stubs.asm
kernel/drivers/: multiboot.h  serial.cpp  serial.h  vga.cpp  vga.h
kernel/include/: asm.h  debug.h  multiboot.h  printf.h  types.h
kernel/memory/: paging.cpp  paging.h  phys.cpp  phys.h
